[gd_scene load_steps=2 format=3 uid="uid://dwsrf2vatxr32"]

[ext_resource type="Script" path="res://Scripts/Characters/Nose/nose_debug_suite.gd" id="1_12sob"]

[node name="NoseDebugSuite" type="Control" groups=["character_debug"]]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -39.0
offset_top = -59.0
offset_right = -819.28
offset_bottom = -628.22
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(4, 4)
script = ExtResource("1_12sob")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="TickleBar" type="ProgressBar" parent="."]
unique_name_in_owner = true
modulate = Color(0, 0.666667, 1, 1)
layout_mode = 0
offset_left = 3.0
offset_top = 2.25
offset_right = 7.0
offset_bottom = 29.25
max_value = 1.0
value = 0.25
fill_mode = 3
show_percentage = false

[node name="BurnBar" type="ProgressBar" parent="."]
unique_name_in_owner = true
modulate = Color(1, 0, 0, 1)
layout_mode = 0
offset_left = 8.0
offset_top = 2.25
offset_right = 12.0
offset_bottom = 29.25
max_value = 1.0
value = 0.25
fill_mode = 3
show_percentage = false

[node name="SensitivityBar" type="ProgressBar" parent="."]
unique_name_in_owner = true
modulate = Color(0, 1, 0.483333, 1)
layout_mode = 0
offset_left = 13.0
offset_top = 2.25
offset_right = 17.0
offset_bottom = 29.25
max_value = 1.0
value = 0.25
fill_mode = 3
show_percentage = false
